@@ -17,6 +17,10 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 CVS changes since last release:
 
+server/skill_util.c: Add missing call to out_of_map in skill_attack which
+  could result in crashes if player is at edge of maps and decides to attack
+  in direction off map.  MSW 2001-04-18
+
 server/attack.c: Remove error message about golem without owners,
    also add better checking before clering the op->contr->golem field.
 common/map.c: set status flag on maps to MAP_SAVING so remove_ob does
